changed heral by $USER and working dir name to be general

--- a/01_QC/multiqc_DNA.html
+++ b/01_QC/multiqc_DNA.html
@@ -6591,7 +6591,7 @@ function findPos(obj) {
   
     based on data in:
     
-      <code class="mqc_analysis_path">/scratch/heral/TRABAJO_FINAL/samples/dna/fastqc_output</code></p>
+      <code class="mqc_analysis_path">/scratch/$USER/trabajo-final-bioinformatics/samples/dna/fastqc_output</code></p>
     
   
 </div>
