--- a/01_QC/multiqc_RNA.html
+++ b/01_QC/multiqc_RNA.html
@@ -6591,7 +6591,7 @@ function findPos(obj) {
   
     based on data in:
     
-      <code class="mqc_analysis_path">/scratch/heral/TRABAJO_FINAL/samples/rna/fastqc_output</code></p>
+      <code class="mqc_analysis_path">/scratch/$USER/trabajo-final-bioinformatics/samples/rna/fastqc_output</code></p>
     
   
 </div>
